deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hf-test-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hf-test-app
  template:
    metadata:
      labels:
        app: hf-test-app
    spec:
      containers:
      - name: hf-test-app
        image: hf_app:v1.3
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: hf-test-app-service
spec:
  selector:
    app: hf-test-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
