deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hf-test-app-service
spec:
  selector:
    app: hf-test-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
